[project]
name = "aegis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
